--- a/requirements.txt
+++ b/requirements.txt
@@ -1,132 +1,268 @@
-aiohttp
-aiosignal
-altair
-annotated-types
-anyio
-async-timeout
-attrs
-beautifulsoup4~=4.12.3
-blinker
-Brotli
-cachetools
-certifi
-cffi
-chardet
-charset-normalizer
-click
-colorama
-cssselect2
-Cython
-dataclasses-json
-decorator
-distro
-dtw-python
-edge-tts
-exceptiongroup
-filelock
-fonttools
-frozenlist
-fsspec
-gitdb
-GitPython
-greenlet
-h11
-html5lib
-httpcore
-httpx
-idna
-imageio
-imageio-ffmpeg
-importlib_metadata
-Jinja2
-jsonpatch
-jsonpointer
-jsonschema
-jsonschema-specifications
-langchain~=0.2.16
-langchain-community~=0.2.16
-langchain-core~=0.2.38
-langchain-openai~=0.1.23
-langchain-text-splitters~=0.2.4
-langchainhub
-langgraph~=0.2.16
-langsmith
-llvmlite
-Markdown
-markdown-it-py
-MarkupSafe
-marshmallow
-mdurl
-more-itertools
-moviepy
-mpmath
-multidict
-mypy-extensions
-narwhals
-networkx
-numba
-numexpr~=2.10.1
-numpy
-openai~=1.43.0
-openai-whisper
-orjson
-packaging
-pandas
-pdfkit
-pillow~=10.4.0
-pip
-proglog
-protobuf
-pyarrow
-pycparser
-pydantic~=2.8.2
-pydantic_core
-pydeck
-pydyf
-Pygments
-pyphen
-PySocks
-python-dateutil
-python-decouple~=3.8
-pytz
-PyYAML
-referencing
-regex
-reportlab~=4.2.2
-requests~=2.32.3
-rich
-rpds-py
-scipy
-setuptools
-six
-smmap
-sniffio
-soupsieve
-SQLAlchemy
-streamlit~=1.38.0
-sympy
-tenacity
-tiktoken
-tinycss2
-toml
-torch
-tornado
-tqdm
-types-requests
-typing_extensions
-typing-inspect
-tzdata
-urllib3
-watchdog
-weasyprint
-webencodings
-wheel
-whisper-timestamped
-win-inet-pton
-yarl
-zipp
-langchain-anthropic~=0.1.23
-gTTS~=2.5.3
-boto3~=1.35.21
-mysql~=0.0.3
-botocore~=1.35.21
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+altair==5.4.1
+annotated-types==0.7.0
+anthropic==0.34.1
+anyio==4.4.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asgiref==3.8.1
+asttokens==2.4.1
+async-lru==2.0.4
+async-timeout==4.0.3
+attrs==24.2.0
+babel==2.16.0
+backoff==2.2.1
+bcrypt==4.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.8.2
+boto3==1.35.44
+botocore==1.35.44
+branca==0.8.0
+Brotli==1.1.0
+build==1.2.2
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+Chroma==0.2.0
+chroma-hnswlib==0.7.3
+chromadb==0.5.0
+click==8.1.7
+colorama==0.4.6
+coloredlogs==15.0.1
+comm==0.2.2
+cryptography==43.0.1
+cssselect2==0.7.0
+Cython==3.0.11
+dataclasses-json==0.6.7
+debugpy==1.8.5
+decorator==4.4.2
+defusedxml==0.7.1
+Deprecated==1.2.14
+distro==1.9.0
+dtw-python==1.5.3
+durationpy==0.7
+edge-tts==6.1.12
+exceptiongroup==1.2.2
+executing==2.1.0
+fastapi==0.115.0
+fastjsonschema==2.20.0
+filelock==3.15.4
+Flask==3.0.3
+flatbuffers==24.3.25
+folium==0.17.0
+fonttools==4.53.1
+fqdn==1.5.1
+frozenlist==1.4.1
+fsspec==2024.6.1
+geographiclib==2.0
+geopy==2.4.1
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.35.0
+googleapis-common-protos==1.65.0
+googlemaps==4.10.0
+greenlet==3.0.3
+grpcio==1.66.2
+gTTS==2.5.3
+h11==0.14.0
+html5lib==1.1
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.2
+huggingface-hub==0.24.6
+humanfriendly==10.0
+idna==3.8
+imageio==2.35.1
+imageio-ffmpeg==0.5.1
+importlib_metadata==8.4.0
+importlib_resources==6.4.5
+ipykernel==6.29.5
+ipython==8.27.0
+isoduration==20.11.0
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
+jiter==0.5.0
+jmespath==1.0.1
+json5==0.9.25
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+kubernetes==31.0.0
+langchain==0.2.16
+langchain-anthropic==0.1.23
+langchain-chroma==0.1.4
+langchain-community==0.2.16
+langchain-core==0.2.41
+langchain-openai==0.1.23
+langchain-text-splitters==0.2.4
+langchainhub==0.1.21
+langgraph==0.2.16
+langgraph-checkpoint==1.0.8
+langsmith==0.1.129
+llvmlite==0.43.0
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.22.0
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.0.2
+mmh3==5.0.1
+monotonic==1.6
+more-itertools==10.4.0
+moviepy==1.0.3
+mpmath==1.3.0
+multidict==6.0.5
+mypy-extensions==1.0.0
+mysql==0.0.3
+mysql-connector-python==9.0.0
+mysqlclient==2.2.4
+narwhals==1.6.2
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.3
+notebook==7.2.2
+notebook_shim==0.2.4
+numba==0.60.0
+numexpr==2.10.1
+numpy==1.26.4
+oauthlib==3.2.2
+onnxruntime==1.19.2
+openai==1.43.0
+openai-whisper==20231117
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-instrumentation==0.48b0
+opentelemetry-instrumentation-asgi==0.48b0
+opentelemetry-instrumentation-fastapi==0.48b0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opentelemetry-util-http==0.48b0
+orjson==3.10.7
+overrides==7.7.0
+p2j==1.3.2
+packaging==24.1
+pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
+pdfkit==1.0.0
+pdfminer.six==20231228
+pdfplumber==0.11.4
+pillow==10.4.0
+platformdirs==4.3.2
+posthog==3.6.6
+proglog==0.1.10
+prometheus_client==0.20.0
+prompt_toolkit==3.0.47
+protobuf==4.25.5
+psutil==6.0.0
+pure_eval==0.2.3
+pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydeck==0.9.1
+pydub==0.25.1
+pydyf==0.11.0
+Pygments==2.18.0
+pypdf==5.0.1
+PyPDF2==3.0.1
+pypdfium2==4.30.0
+pyphen==0.16.0
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+python-dotenv==1.0.1
+python-json-logger==2.0.7
+pytz==2024.1
+pywin32==306
+pywinpty==2.0.13
+PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
+regex==2024.7.24
+reportlab==4.2.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.8.0
+rpds-py==0.20.0
+rsa==4.9
+s3transfer==0.10.2
+scipy==1.14.1
+Send2Trash==1.8.3
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.33
+sqlite-s3-query==0.0.81
+stack-data==0.6.3
+starlette==0.38.6
+streamlit==1.38.0
+streamlit_TTS==0.0.7
+sympy==1.13.2
+tenacity==8.5.0
+terminado==0.18.1
+tiktoken==0.7.0
+tinycss2==1.3.0
+tokenizers==0.20.0
+toml==0.10.2
+tools-py==1.0.1
+torch==2.4.0
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+typer==0.12.5
+types-python-dateutil==2.9.0.20240906
+types-requests==2.32.0.20240712
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.1
+uri-template==1.3.0
+urllib3==2.2.2
+uvicorn==0.31.0
+watchdog==4.0.2
+watchfiles==0.24.0
+wcwidth==0.2.13
+weasyprint==62.3
+webcolors==24.8.0
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==13.1
+Werkzeug==3.0.4
+whisper-timestamped==1.15.4
+win-inet-pton==1.1.0
+wrapt==1.16.0
+xyzservices==2024.9.0
+yarl==1.9.7
+zipp==3.20.1
+zopfli==0.2.3
